--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "dotenv": "^16.4.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "framer-motion": "^7.6.4",
